Revert "Expose method to find user and their tenants"