@@ -1,7 +1,6 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.hosted.controller.api.integration.stubs;
 
-import com.yahoo.component.AbstractComponent;
 import com.yahoo.jdisc.http.filter.security.misc.User;
 import com.yahoo.vespa.hosted.controller.api.integration.user.UserId;
 import com.yahoo.vespa.hosted.controller.api.integration.user.UserManagement;
@@ -14,14 +13,13 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
  * @author jonmv
  */
-public class MockUserManagement extends AbstractComponent implements UserManagement {
+public class MockUserManagement implements UserManagement {
 
     private final Map<Role, Set<User>> memberships = new HashMap<>();
 
@@ -50,7 +48,7 @@ public class MockUserManagement extends AbstractComponent implements UserManagem
     public void addUsers(Role role, Collection<UserId> users) {
         List<User> userObjs = users.stream()
                                    .map(id -> new User(id.value(), id.value(), null, null))
-                                   .toList();
+                                   .collect(Collectors.toList());
         get(role).addAll(userObjs);
     }
 
@@ -80,22 +78,11 @@ public class MockUserManagement extends AbstractComponent implements UserManagem
 
     @Override
     public List<Role> listRoles(UserId userId) {
-        return memberships.entrySet().stream()
-                .filter(entry -> entry.getValue().stream().anyMatch(user -> user.name().equals(userId.value())))
-                .map(Map.Entry::getKey)
-                .toList();
+        return List.of();
     }
 
     @Override
     public List<Role> listRoles() {
         return new ArrayList<>(memberships.keySet());
-    }
-
-    @Override
-    public Optional<User> findUser(String email) {
-        return memberships.values().stream()
-                .flatMap(Collection::stream)
-                .filter(user -> user.email().equals(email))
-                .findFirst();
     }
 }
